produce: Destroy PipeWireSourceStream on the right thread

m_stream is created during initialize() which is run on the produce
thread, so we need to ensure we also destroy it on that thread as
otherwise with PipeWire 1.2+ we can end up in a deadlock.

BUG: 489434


(cherry picked from commit b787a4953130a14704183dd794e2dbb741001a8b)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>